--- a/index.html
+++ b/index.html
@@ -2,34 +2,71 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>To-Do List Web App | Aman Choudhary</title>
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="todo-list.png" />
+
+  <!-- Bootstrap 5 CSS -->
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+    crossorigin="anonymous"
+  />
+
+  <!-- Custom CSS -->
   <link rel="stylesheet" href="style.css" />
 </head>
-<body>
-  <div class="todo-app">
-    <h1>To-Do List Web App</h1>
-    <p class="subtitle">
-      Add your daily tasks and manage them easily.
-    </p>
+<body class="bg-gradient-body d-flex align-items-center justify-content-center min-vh-100">
 
-    <!-- Add Task Form -->
-    <form id="todo-form" autocomplete="off">
-      <input
-        type="text"
-        id="todo-input"
-        placeholder="Enter a new task..."
-      />
-      <button type="submit">Add Task</button>
-    </form>
+  <main class="container">
+    <div class="row justify-content-center">
+      <div class="col-12 col-sm-10 col-md-8 col-lg-5">
+        <div class="card todo-card shadow-lg border-0">
+          <div class="card-body">
+            <h1 class="h4 fw-bold gradient-title mb-1 text-center">
+              To-Do List Web App
+            </h1>
+            <p class="text-muted small text-center mb-3">
+              Add your daily tasks and manage them easily.
+            </p>
 
-    <!-- Task List -->
-    <ul id="todo-list"></ul>
+            <!-- Task input form -->
+            <form id="todo-form" class="d-flex gap-2 mb-3" autocomplete="off">
+              <input
+                type="text"
+                id="todo-input"
+                class="form-control"
+                placeholder="Enter a new task..."
+              />
+              <button type="submit" class="btn btn-gradient px-3">
+                Add
+              </button>
+            </form>
 
-    <p id="empty-message" class="empty-message">
-      No tasks yet. Start by adding one above.
-    </p>
-  </div>
+            <!-- Task list -->
+            <ul id="todo-list" class="list-group mb-2"></ul>
 
+            <!-- Shown only when there are no tasks -->
+            <p id="empty-message" class="text-center text-muted small mb-0">
+              No tasks yet. Start by adding one above.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
+
+  <!-- Bootstrap JS bundle -->
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"
+  ></script>
+
+  <!-- App logic -->
   <script src="script.js"></script>
 </body>
 </html>
